<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.supercynical.hourlywagetimecalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitleText"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textSize="35sp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newSessionButtonText"
        android:id="@+id/newSessionButton"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#304ffe"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainORText"
        android:id="@+id/textView2"
        android:layout_below="@+id/newSessionButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevSessionButtonText"
        android:id="@+id/prevSessionButton"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:padding="10dp" />
</RelativeLayout>
