<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.supercynical.hourlywagetimecalculator.NewSession"
    tools:showIn="@layout/activity_new_session">

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:format="%s"
        android:textSize="75sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- Start Button -->
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/startButtonText"
        android:id="@+id/startButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="180dp"
        android:background="#33691e" />

    <!-- Stop Button -->
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/stopButtonText"
        android:id="@+id/stopButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp"
        android:layout_marginStart="180dp"
        android:background="#b71c1c" />

    <!-- Clear Button -->
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/clearButtonText"
        android:id="@+id/clearButton"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#304ffe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/timerStatusText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <!-- Total Charge text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/totalChargeText"
        android:id="@+id/totalChargeText"
        android:layout_marginTop="77dp"
        android:layout_marginStart="-50dp"
        android:layout_below="@+id/clearButton"
        android:layout_alignStart="@+id/clearButton"/>

    <!-- At Rate text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/atRateText"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/totalChargeText"
        android:layout_centerHorizontal="true" />

    <!-- Charge Amount Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalChargeAmtText"
        android:layout_above="@+id/atRateText"
        android:layout_toEndOf="@+id/totalChargeText"
        android:layout_marginStart="30dp"
        android:includeFontPadding="false" />

</RelativeLayout>
